--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <a href="/TC2006B_a01633010/html/css_cheat_sheet.html"> 1.1 HTML Cheat Sheet</a><br>
     <a href="/TC2006B_a01633010/html/html_cheat_sheet_500.html"> 1.2 CSS Cheat Sheet </a><br>
     <a href="/TC2006B_a01633010/js/actividadJS_a01633010.js"> 1.3 Basic JavaScript</a><br>
-    <a href="/TC2006B_a01633010/html/dom_events.html"> 1.4 DOM Events</a><br>
+    <a href="/TC2006B_a01633010/html/simplapage.html"> 1.4 Página Web Simple</a><br>
+    <a href="/TC2006B_a01633010/html/dom_events.html"> 1.5 DOM Events</a><br>
     
     
     <h3> Módulo de Bases de Datos </h3>
