--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="/TC2006B_a01633010/js/actividadJS_a01633010.js"> 1.3 Basic JavaScript</a><br>
     <a href="/TC2006B_a01633010/html/simplapage.html"> 1.4 Página Web Simple</a><br>
     <a href="/TC2006B_a01633010/html/dom_events.html"> 1.5 DOM Events</a><br>
+    <a href="/TC2006B_a01633010/html/css_grid.html"> 1.6 CSS Grid Page</a><br>
     
     
     <h3> Módulo de Bases de Datos </h3>
